<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout_perfil_medico"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/rectangle_at_the_top4"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:background="#044373"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/icon_menu_perfil_medico"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/menu_icon_description"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_at_the_top4"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:srcCompat="@mipmap/ic_menu_foreground" />

        <ImageButton
            android:id="@+id/icon_home_page_button_perfil_medico"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/add_icon_description"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/rectangle_at_the_top4"
            app:layout_constraintEnd_toStartOf="@+id/icon_profile_perfil_medico"
            app:layout_constraintStart_toEndOf="@+id/icon_menu_perfil_medico"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_home_page_foreground" />


        <ImageButton
            android:id="@+id/icon_profile_perfil_medico"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/profile_icon_description"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_at_the_top4"
            app:layout_constraintHorizontal_bias="0.943"
            app:layout_constraintStart_toEndOf="@+id/icon_menu_perfil_medico"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_profile_foreground" />


        <ImageView
            android:id="@+id/profile_picture_medical_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/profile_image_descrpition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rectangle_at_the_top4"
            app:srcCompat="@mipmap/ic_perfil_foreground" />

        <View
            android:id="@+id/background_medical_data_form"
            android:layout_width="264dp"
            android:layout_height="328dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="16dp"
            android:background="#D9D9D9"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/rectangle_at_the_bottom3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture_medical_profile"
            app:layout_constraintVertical_bias="0.581" />



        <View
            android:id="@+id/rectangle_at_the_bottom3"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_alignParentTop="true"
            android:background="#044373"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/icon_map_perfil_medico"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginStart="176dp"
            android:layout_marginBottom="24dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/map_icon_description"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_at_the_bottom3"
            app:layout_constraintHorizontal_bias="0.011"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/ic_map_foreground" />

        <ImageButton
            android:id="@+id/icon_add_perfil_medico"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/add_icon_description"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon_map_perfil_medico"
            app:layout_constraintHorizontal_bias="0.316"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/ic_add_foreground" />

        <ImageButton
            android:id="@+id/icon_route_perfil_medico"
            android:layout_width="55dp"
            android:layout_height="48dp"
            android:layout_marginStart="52dp"
            android:layout_marginBottom="24dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/search_icon_description"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_at_the_bottom3"
            app:layout_constraintStart_toEndOf="@+id/icon_map_perfil_medico"
            app:srcCompat="@mipmap/ic_route_white_foreground"
            tools:visibility="visible" />


        <TextView
            android:id="@+id/text_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/nombre"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.277"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/background_medical_data_form" />

        <TextView
            android:id="@+id/text_hint_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/hint_nombre"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.552"
            app:layout_constraintStart_toEndOf="@+id/text_nombre"
            app:layout_constraintTop_toTopOf="@id/background_medical_data_form" />

        <TextView
            android:id="@+id/text_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/apellidos"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.286"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_nombre" />

        <TextView
            android:id="@+id/text_hint_apellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/hint_apellidos"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toEndOf="@+id/text_apellidos"
            app:layout_constraintTop_toBottomOf="@+id/text_hint_nombre" />

        <TextView
            android:id="@+id/text_edad"
            android:layout_width="54dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/edad"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.263"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_apellidos" />

        <TextView
            android:id="@+id/text_hint_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/hint_edad"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintStart_toEndOf="@+id/text_edad"
            app:layout_constraintTop_toTopOf="@+id/text_hint_apellidos" />

        <TextView
            android:id="@+id/text_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/direccion"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.288"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_edad" />

        <TextView
            android:id="@+id/text_hint_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/hint_direccion"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toEndOf="@+id/text_direccion"
            app:layout_constraintTop_toTopOf="@+id/text_hint_edad" />

        <TextView
            android:id="@+id/text_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/telefono"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.282"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_direccion" />

        <TextView
            android:id="@+id/text_hint_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/hint_telefono"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toEndOf="@+id/text_telefono"
            app:layout_constraintTop_toTopOf="@+id/text_hint_direccion" />

        <TextView
            android:id="@+id/text_aseguradora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/aseguradora"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.317"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_telefono" />


        <TextView
            android:id="@+id/text_hint_aseguradora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/hint_aseguradora"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/text_aseguradora"
            app:layout_constraintTop_toTopOf="@+id/text_hint_telefono" />

        <TextView
            android:id="@+id/text_grupo_sanguineo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/grupo_sanguineo"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_aseguradora" />

        <TextView
            android:id="@+id/text_hint_grupo_sanguineo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/hint_grupo_sanguineo"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.311"
            app:layout_constraintStart_toEndOf="@+id/text_grupo_sanguineo"
            app:layout_constraintTop_toTopOf="@+id/text_hint_aseguradora" />

        <TextView
            android:id="@+id/text_diabetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/diabetes"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_grupo_sanguineo" />

        <TextView
            android:id="@+id/text_hint_diabetes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/hint_diabetes"
            android:textColor="@color/backgroundBottomBarColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.551"
            app:layout_constraintStart_toEndOf="@+id/text_diabetes"
            app:layout_constraintTop_toTopOf="@+id/text_hint_grupo_sanguineo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_perfil_medico"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"/>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_perfil_perfil_medico"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/profile_nav_header"
        app:menu="@menu/perfil_menu"
        android:layout_gravity="end"
        android:fitsSystemWindows="true" />
</androidx.drawerlayout.widget.DrawerLayout>