<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/rectangle_at_the_top3"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:background="#044373"
        android:foregroundTint="@color/backgroundBottomBarColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/return_button"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@color/backgroundBottomBarColor"
        android:contentDescription="@string/return_button"
        android:scaleType="centerCrop"
        android:text="@string/return_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_return_button_foreground" />

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:contentDescription="@string/profile_image_descrpition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_at_the_top3"
        app:srcCompat="@mipmap/ic_perfil_foreground" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/font_inter"
        android:text="@string/username"
        android:textColor="@color/backgroundBottomBarColor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

    <ImageView
        android:id="@+id/divider_profile"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_divider"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:srcCompat="@mipmap/ic_divider_foreground" />

    <View
        android:id="@+id/rectangle_at_the_bottom_profile"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:background="#044373"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_rutas_creadas"
        android:layout_width="134dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/font_inter"
        android:text="@string/rutas_creadas"
        android:textColor="@color/backgroundBottomBarColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_profile" />


    <TextView
        android:id="@+id/text_idioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/font_inter"
        android:text="@string/idioma"
        android:textColor="@color/backgroundBottomBarColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_rutas_creadas" />

    <TextView
        android:id="@+id/text_perfil_medico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/font_inter"
        android:text="@string/perfil_medico"
        android:textColor="@color/backgroundBottomBarColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_idioma" />

</androidx.constraintlayout.widget.ConstraintLayout>